- increased memory size for iplug (necessary for Java 7)